--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <!-- on change left -->
-    <div id="carousel">
+    <main id="carousel">
 
       <!-- first section -->
       <section class="section1">
@@ -83,7 +83,7 @@
           <div class="link-shop">
             <a>SHOP NOW</a>
             <svg class="svg" width="40" height="12" xmlns="http://www.w3.org/2000/svg">
-              <path id="fleche" d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
+              <path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
             </svg>
           </div>
           <div class="black-boxs">
@@ -120,7 +120,7 @@
           <div class="link-shop">
             <a>SHOP NOW</a>
             <svg class="svg" width="40" height="12" xmlns="http://www.w3.org/2000/svg">
-              <path id="fleche" d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
+              <path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
             </svg>
           </div>
           <div class="black-boxs">
@@ -157,7 +157,7 @@
           <div class="link-shop">
             <a>SHOP NOW</a>
             <svg class="svg" width="40" height="12" xmlns="http://www.w3.org/2000/svg">
-              <path id="fleche" d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
+              <path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="#000" fill-rule="nonzero"/>
             </svg>
           </div>
           <div class="black-boxs">
@@ -170,7 +170,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </main>
     
     <!-- unchange section / mobile section flex column -->
     <section class="last">
