--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="container-img">
             <img class="img-resp" alt="image de bureau avec un chaise" src="images/desktop-image-hero-1.jpg">
             <div class="black-boxs-small">
-              <div class="black-box1">
+              <div onclick="prevSlide2()" class="black-box1">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
               <div onclick="prevSlide1()" class="black-box2">
@@ -88,7 +88,7 @@
               </svg>
             </div>
             <div class="black-boxs">
-              <div class="black-box1">
+              <div onclick="prevSlide2()" class="black-box1">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
               <div onclick="prevSlide1()" class="black-box2">
@@ -143,7 +143,7 @@
               <div onclick="prevSlide1()" class="black-box1">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
-              <div class="black-box2">
+              <div onclick="prevSlide3()" class="black-box2">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
             </div>
@@ -165,7 +165,7 @@
               <div onclick="prevSlide1()" class="black-box1">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M13 0L1 12l12 12" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
-              <div class="black-box2">
+              <div onclick="prevSlide3()" class="black-box2">
                 <svg width="14" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M1 0l12 12L1 24" stroke="#FFF" fill="none" fill-rule="evenodd"/></svg>
               </div>
             </div>
